public interface Appareil {

    /**
     * Methode permettant d allumer les appareils
     */
    public void allumer();

    /**
     * Methode permettant d eteindre les appareils
     */
    public void eteindre();

    public String toString();

}
