@startuml



class Lampe{
-allume : boolean
+Lampe(String paramNom)
+allumer()
+eteinfre()
+toString() : String
+isAllume() : boolean
}

interface Appareil{
+allumer()
+eteindre()
}

class Telecommande{
+Telecommande()
+ajouterAppareil(Appareil a)
+activerAppareil(int i)
+desactiverAppareil(int i)
+activerTout()
+toString() : String
}



class Hifi {
-son : int
+allumer()
+eteindre()
+toString() : String
}

class Cheminee{
+intensitée : int
+Cheminee()
+changerIntensite(int i)
+getLumiere() : int
+toString() : String
}

class ModifierCheminee{
+eteindre()
+allumer()
+toString() :String
}

class Television{
-son : int
+allumer()
+eteindre()
+toString() : String
}


Appareil  <|.. Lampe
Appareil  <|..  Hifi
Appareil  <|..  Television
Appareil <|.. ModifierCheminee
Telecommande "*" --> "*" Appareil : -appareil
ModifierCheminee "*" --> "1" Cheminee : -cheminee
ModifierCheminee --|>  Cheminee


@enduml